--- a/index.html
+++ b/index.html
@@ -219,9 +219,10 @@
 
         <section class="about-text">
           <p>
-            I'm a Creative Director and UI/UX Designer based in Casablanca, Morocco, 
-            with expertise in web apps, video editing, Visual arts, and movie script writing. 
-            I specialize in transforming complex problems into simple, beautiful, and intuitive designs.
+            I'm a Passionate and ambitious 23-year-old developer with significant experience in the field of
+            databases. Expert in Java technologies, Spring Boot, and Angular, I am skilled in designing
+            innovative and high-performance solutions. With a strong ability to solve challenges and
+            successfully lead projects, I am a valuable collaborator within dynamic teams.
         </p>
         
         <p>
@@ -243,6 +244,22 @@
             <h3 class="h3 service-title">What i'm doing</h3>
   
             <ul class="service-list">
+
+              <li class="service-item">
+  
+                <div class="service-icon-box">
+                  <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
+                </div>
+  
+                <div class="service-content-box">
+                  <h4 class="h4 service-item-title">Web development</h4>
+  
+                  <p class="service-item-text">
+                    High-quality development of sites at the professional level.Utilizing a comprehensive full-stack process.
+                  </p>
+                </div>
+  
+              </li>
   
               <li class="service-item">
   
@@ -261,21 +278,6 @@
   
               </li>
   
-              <li class="service-item">
-  
-                <div class="service-icon-box">
-                  <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
-                </div>
-  
-                <div class="service-content-box">
-                  <h4 class="h4 service-item-title">Web development</h4>
-  
-                  <p class="service-item-text">
-                    High-quality development of sites at the professional level.Utilizing a comprehensive full-stack process.
-                  </p>
-                </div>
-  
-              </li>
   
               <li class="service-item">
   
