--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
 
       <div class="sidebar-info">
 
-        <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Richard hanrick" width="80">
-        </figure>
+        <img src="./assets/images/logo.ico" alt="Richard hanrick" width="140">
 
         <div class="info-content">
           <h1 class="name" title="Richard hanrick">ANAS ANASRI</h1>
