--- a/index.html
+++ b/index.html
@@ -486,7 +486,6 @@
           </div>
 
           <ol class="timeline-list">
-
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">M2T SA</h4>
@@ -494,9 +493,7 @@
               <span>2024 — Present</span>
 
               <p class="timeline-text">
-                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                molestias
-                exceptur.
+                Conception and development of an online payment platform named "PayPik," easy to implement, supporting various payment methods (credit card, token, PayPal, etc.). This solution enables merchants to easily manage multiple payment methods on their e-commerce site without the complexity of multiple transaction tracking systems.
               </p>
 
             </li>
@@ -508,9 +505,7 @@
               <span>August 2023 - September 2023</span>
 
               <p class="timeline-text">
-                Java Developer Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Conception and development of an application named "AFMM" using JavaFX to provide a comprehensive solution for supplier management and invoice generation.
               </p>
 
             </li>
